resolved spacing issue

--- a/src/app/pages/help/help.component.scss
+++ b/src/app/pages/help/help.component.scss
@@ -2,10 +2,6 @@
     text-align: center;
 }
 
-.custom-top {
-    margin-top: 1%;
-}
-
 img {
     border: 1px solid silver;
     mix-blend-mode: multiply;
